# resotodatalink

./: LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements-all.txt  requirements.txt  setup.cfg  tox.ini
.github/workflows/: build_and_publish.yml
resoto_datalink/: collect_plugins.py  schema_utils.py  snowflake.py  sql.py
resoto_datalink/arrow/: model.py  type_converter.py  writer.py
resotodatalink/: __init__.py  analytics.py  batch_stream.py  collect_plugins.py  remote_graph.py  schema_utils.py  snowflake.py  sql.py
resotodatalink/arrow/: model.py  type_converter.py  writer.py
tests/: batch_stream_test.py  collect_plugins_test.py  conftest.py  remote_graph_test.py  sql_test.py
tests/arrow/: model_test.py  writer_test.py
